# divine-mirror

./: .env.example  .gitignore  .replit  DYNAMIC_STATS_COMPLETE.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md  PHASE7_COMPLETION_SUMMARY.md  PHASE8_COMPLETION_SUMMARY.md  PHASE9_COMPLETION_SUMMARY.md  README.md  README_SACRED_SETUP.md  SACRED_TEXT_INVENTORY.md  STATS_RECALIBRATION_COMPLETE.md  app.py  auto_ingest.py  auto_sacred_import.py  compress_texts.py  data_structure_guide.md  divine_advanced_search.py  divine_cross_comparison.py  divine_emotional_engine.py  divine_enhanced_loader.py  divine_enhanced_search_with_emotion.py  divine_forensic_search.py  divine_intelligent_tagger.py  divine_loader_full.py  divine_loader_phase3.py  divine_metadata_generator.py  divine_mirror_metadata.json  divine_simple_processor.py  divine_synthesis_engine.py  divine_vector_processor.py  divine_vector_processor_local.py  divine_voice_interface.py  dynamic_stats_updater.py  episode_hell_doctrine_script.md  episode_kingdom_within_script.md  episode_money_changers_script.md  episode_sacred_feminine_script.md  (+16 more)
.streamlit/: config.toml
attached_assets/: # Yeshua’s Teachings Truth vs. Manipulation_1751814586769.txt  Pasted--divine-loader-full-py-python-Copy-Edit-import-os-import-requests-import-re-BASE-DIR-data-text-1753484809159_1753484809160.txt  Pasted--recalibrate-the-homepage-stats-on-your-Divine-Mirror-AI-app-like-Sacred-Texts-Analyzed-Documents--1753491362684_1753491362685.txt  README.md  divine_loader_phase3_1753484606858.py  (+11 more)
(+247 files in other folders)
